# FileSignatureMaker

./: CMakeLists.txt  Makefile  README.md  Signature.vcxproj  conanfile.txt  shell.nix
cmake/: Conan.cmake  Dependencies.cmake
src/: block_storage.cpp  block_storage.hpp  interface_block_storage.hpp  main.cpp  per_block_file_processor.cpp  per_block_file_processor.hpp  profile.hpp  signature_maker.cpp  signature_maker.hpp  thread_pool.cpp  thread_pool.hpp
tests/: md5sum.sh  print_signature.cpp
